index.css
#overlay{
    position:static;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0; 
    background-image: url(./backgrounds/landing.jpg);
    background-repeat: no-repeat;
    background-size:cover;
    margin: auto ;
    
    
}
#logo{
    padding: auto;
    justify-content: center;
    text-align: center;
    color: white;
    margin: auto;
    padding-top: 15px;
    
}
#list{
  width: 280px;
  height: 100px;
  margin: auto;
  text-align: center;
  background-color: whitesmoke;
  display: block;
  justify-items: normal;
  position: relative;
  
}
#list>p{
    text-align: center;
    margin: auto;
    padding-top: 30px;
    color: black;
    font-family: sans-serif;
    font-size: 24px;
}
#PT{
    width: 280px;
    height: 100px;
  margin: auto;
  text-align: center;
  background-color: #F15A29;
  display: block;
  position: absolute;
  

}
#PT>p{
    text-align: center;
    margin: auto;
    padding-top: 30px;
    color: white;
    font-family: sans-serif;
    font-size: 24px;
    

}
#HappyHour{
    
    
    background-color: whitesmoke;
    width: 30%;
    height: 10%;
}
strong{
    font-weight: 700px;

}
.menu{
    display: flex;
    flex-direction: row;
    image-resolution: 100%;
    margin: auto;
   
    height: 300px;
    }
   
/* #breakfast{
    background-image: url(./foodtop/breakfast.jpg);
    height: 200px;
    width: 700px;
    margin: auto;
    text-align: center;
    background-repeat: no-repeat;
    background-size:auto;}
     */

/* #lunch{
    background-image: url(./foodtop/dinner2.jpg);
    background-size:auto;
    background-repeat: no-repeat;
    padding: 0;
    height: 200px;
    width: 700px;
    margin: auto;
    text-align: center;
}*/

/* #dinner{
    background-image: url(./foodtop/dinner.jpg);
    height: 200px;
    width: 700px;
    margin: auto;
    text-align: center;
    background-repeat: no-repeat;
    background-size:auto; }*/

.fastfoods{
    
    display: flex;
    flex-direction: column;
    position: inherit;
    width: 50%;
    float: left;
    margin: auto;
    box-sizing: content-box;
    border:3px solid white ;
    box-shadow: 2px 2px 5px grey; 
}
#fastfoodtxt{
    text-align: left;
   width: 70%;
   margin: auto;
}
#fastfoodphoto{
    text-align: center;
    justify-content: space-around;
    width: 70%;
    margin: auto;  
}
#footer{
    background-color: #F15A29;
    text-align: center;
    color: white;
    font-size: 24px;
    margin: auto;
}
#footerburger{
    text-align: center;
    margin: auto;
    padding-top: 3em;
    width: 100%  
}
.footerimg {
    width: 100%;
    height: 100%;
}
#subscribe{
    background-image: url(./backgrounds/subscribe.jpg);
    background-size: cover;
    width: 100%;
    padding: 10rem 0;
   
}
.subscribe {
    box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
    padding: 2% 3%;
    height: auto;
    width: 30%;
    margin: auto;
    font-family: 'Merienda One', cursive;
    font-size: 100%;
    text-transform: capitalize;
    border: 0;
    text-align: center;
    background-color: white;
    opacity: 0.5;
    
}
button{
    box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
    padding: 2% 3%;
    height: auto;
    width: 20%;
    margin: auto;
    font-family:'Noto Sans HK', sans-serif;
    font-size: 100%;
    text-transform: capitalize;
    border: 0;
    text-align: center;
    background-color: #F15A29;
    justify-content: left;
    }
 .float{
        display: flex;
        flex-direction: row;
        justify-content: space-around;  
        
        
    
    }
#subscribe h3{
    color: white;
    text-align: center;
    font-family:'Noto Sans HK', sans-serif;
}

